# mmachine

./: Cargo.toml  readme.md  specs.md  test.mmb
mmasms/: hello.mmasm  test.mmasm  test2.mmasm
mmbs/: hello.mmb  test.mmb
src/: bits.rs  bus.rs  control_cables.rs  cpu_component.rs  decode.rs  lib.rs  main.rs  microcodes.rs  tests.rs
