[package]
name = "mmachine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
phf = { version = "0.11", features = ["macros"] }

[[bin]]
name = "asm"
